syntax="proto3";

import "google/protobuf/wrappers.proto";

option go_package="ecommerce/";

service OrderManagement {
  rpc GetOrder(google.protobuf.StringValue) returns (Order);
  rpc SearchOrders(google.protobuf.StringValue) returns (stream Order);
  rpc UpdateOrders(stream Order) returns (google.protobuf.StringValue);
  rpc ProcessOrders(stream google.protobuf.StringValue) returns (stream CombinedShipment);
}

message Order {
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}

message CombinedShipment {
  string id = 1;
  string status = 2;
  repeated Order ordersList = 3;
}